# syscore-embed

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
drivers/net/: CMakeLists.txt  Packet.hpp  PacketQueue.hpp
drivers/net/w5300/: CMakeLists.txt  w5300.cpp  w5300.hpp
include/: CMakeLists.txt
include/syscore/: CMakeLists.txt
kernel/: Atomic.hpp  CMakeLists.txt  LockGuard.hpp  Mutex.hpp  Queue.hpp  RingBuffer.hpp  Semaphore.hpp
kernel/win32/: CMakeLists.txt  Win32Mutex.cpp  Win32Semaphore.cpp
